--- a/views/about.hbs
+++ b/views/about.hbs
@@ -11,7 +11,20 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <img class="portrait" src="/imagesg/me.png">
+        <img class="portrait" src="/images/me.jpg">
+
+        <p>This site was created by {{name}}</p>
+        <hr>
+        <p>It uses data from:</p>
+        <ul>
+            <li>
+                <a href="https://mapbox.com" target="_blank">mapbox.com</a>
+            </li>
+            <li>
+                <a href="https://darksky.net" target="_blank">darksky.net</a>
+            </li>
+        </ul>
+        <p>to fetch the latest weather and temperature for a given location.</p>
     </div>
     
     {{>footer}}
