--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,3 +1,7 @@
 <footer>
-    <p>Created by {{name}}</p>
+    <div class="footer">
+        <div class="container">
+            Made with <i class="fa fa-heart heart"></i> by Created by {{name}}. Free download <a href="http://www.creative-tim.com/product/coming-sssoon-page">here.</a>
+        </div>
+    </div>
 </footer>
