--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,7 +1,7 @@
 <footer>
     <div class="footer">
         <div class="container">
-            Made with <i class="fa fa-heart heart"></i> by Created by {{name}}. Free download <a href="http://www.creative-tim.com/product/coming-sssoon-page">here.</a>
+            Made with <i class="fa fa-heart heart"></i> by Created by {{name}}.
         </div>
     </div>
 </footer>
