--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,9 +1,10 @@
 body {
     color: #333333;
     font-family: arial;
-    max-width: 650px;
-    margin: 0 auto;
+    width: max-content;
+    margin: auto auto;
     padding: 0 16px;
+
 
     display: flex;
     flex-direction: column;
